--- a/header.html
+++ b/header.html
@@ -1,10 +1,10 @@
 <div class="container-fluid navBody">
     <div class="row text-center p-1">
         <a href="" class="navElement icon col-md-1 col-xs-12 col-sm-12 offset-md-1 offset-xs-0 offset-sm-0">&nbsp;</a>
-        <a href="" class="navElement homeElem col-md-1 col-sm-6 col-xs-12 offset-xs-0 offset-sm-0 offset-md-4 p-sm-4 p-xs-2 text-white">Home</a>
-        <a href="" class="navElement contactElem col-md-1 col-sm-6 col-xs-12 p-sm-4 p-xs-2 text-white">Contacts</a>
-        <a href="" class="navElement aboutElem col-md-1 col-sm-6 col-xs-12 p-sm-4 p-xs-2 text-white">About</a>
+        <a href="index.html" class="navElement homeElem col-md-1 col-sm-6 col-xs-12 offset-xs-0 offset-sm-0 offset-md-4 p-sm-4 p-xs-2 text-white">Home</a>
+        <a href="contacts.html" class="navElement contactElem col-md-1 col-sm-6 col-xs-12 p-sm-4 p-xs-2 text-white">Contacts</a>
+        <a href="about.html" class="navElement aboutElem col-md-1 col-sm-6 col-xs-12 p-sm-4 p-xs-2 text-white">About</a>
         <a href="" class="navElement logInElem col-md-1 col-sm-6 col-xs-12 p-sm-4 p-xs-2 text-white">LogIn</a>
-        <a href="" class="navElement masElem col-md-2 col-sm-12 col-xs-12 p-sm-4 p-xs-2 text-white">Make a suggestion</a>
+        <a href="suggestion.html" class="navElement masElem col-md-2 col-sm-12 col-xs-12 p-sm-4 p-xs-2 text-white">Make a suggestion</a>
     </div>
 </div>
