--- a/index.html
+++ b/index.html
@@ -16,27 +16,33 @@
                 Welcome, user!
             </h1>
             <h2 class="text-center mb-5">Change the world together</h2>
-            <p class="">This site is made to help out you, like a user, like a citizen to help us make your architect city a better place.</p>
+            <p class="">This site is made to help out you, like a user, like a citizen to help us make your architect
+                city a better place.</p>
             <p class="">- Easy to use cite to ive UNESCO information about architect defence problems.
-            - Any time usable at any device.
+                - Any time usable at any device.
             </p>
             <h5 class="">How to use? Simple!</h5>
-            <p class="">1) Register or logIn using your Google account, no on site registration needed.</p>
-            <p class="">2) Go to "Make a suggestion" </p>
-            <p class="">3) Fill the form and add a photo if you have.</p>
-            <p class="">4) Submit </p>
+            <ol>
+                <li class="">Register or logIn using your Google account, no on site registration needed.</li>
+                <li class="">Go to "Make a suggestion"</li>
+                <li class="">Fill the form and add a photo if you have.</li>
+                <li class="">Submit</li>
+            </ol>
             <h5 class="mt-md-5 mt-sm-2 mt-xs-1">What gonna be next?</h5>
-            <p class="mt-md-3 mt-sm-2 mt-xs-1">We gonna sort out, group and send all of your suggestions and send them to UNESCO </p>
+            <p class="mt-md-3 mt-sm-2 mt-xs-1">We gonna sort out, group and send all of your suggestions and send them
+                to UNESCO </p>
         </div>
         <div class="col-md-4 additionalInf">
             <h1 class="">News</h1>
             <div class="newsSegment">
                 <h5 class="">Placeholder</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem consequuntur cum excepturi inventore itaque iusto laboriosam nam nihil quia!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem consequuntur cum excepturi
+                    inventore itaque iusto laboriosam nam nihil quia!</p>
             </div>
             <div class="newsSegment">
                 <h5 class="">Placeholder</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque aut culpa dolore et molestiae non ratione sed temporibus velit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque aut culpa dolore et
+                    molestiae non ratione sed temporibus velit.</p>
             </div>
         </div>
     </div>
