--- a/suggestion.html
+++ b/suggestion.html
@@ -10,7 +10,30 @@
 <header id="header" class="container-fluid"></header>
 <section class="container">
     <div class="row">
-        <div class="col-md-8 contentBlock"></div>
+        <form class="col-md-8 contentBlock container p-5">
+            <div class="row p-2">
+                <h5 class="col-4">Name</h5>
+                <input type="text" class=""></div>
+            <div class="row p-2">
+                <h5 class="col-4">Second name</h5>
+                <input type="text" class=""></div>
+            <div class="row p-2">
+                <h5 class="col-4">Address</h5>
+                <input type="text" class=""></div>
+            <div class="row p-2">
+                <h5 class="col-4">Architectural name</h5>
+                <input type="text" class=""></div>
+            <div class="row p-2">
+                <h5 class="col-4">Description</h5>
+                <textarea class="descriptionInputBox col-8"></textarea></div>
+            <div class="row p-2">
+                <h5 class="col-4">Image, if you have</h5>
+                <input type="file" class=""></div>
+            <div class="row p-2">
+                <h5 class="col-4">Video, if you have</h5>
+                <input type="file" class=""></div>
+            <div class="row p-2"><input type="submit" value="Submit" class="offset-md-4"></div>
+        </form>
         <div class="col-md-4 additionalInf"></div>
     </div>
 </section>
